--- a/src/views/sample.fxml
+++ b/src/views/sample.fxml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.Insets?>
 <?import javafx.scene.canvas.Canvas?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.image.Image?>
@@ -9,19 +8,20 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="750.0" prefWidth="1000.0" style="-fx-background-color: ccc;" xmlns="http://javafx.com/javafx/8.0.65" fx:controller="controllers.Controller" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="750.0" prefWidth="1000.0" style="-fx-background-color: ccc;" xmlns="http://javafx.com/javafx/8.0.65" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.Controller">
     <children>
-        <AnchorPane prefWidth="90.0" style="-fx-background-color: #223;">
+        <AnchorPane style="-fx-background-color: #223;" AnchorPane.bottomAnchor="0.0" AnchorPane.topAnchor="0.0">
             <children>
                 <ImageView fitHeight="32.0" fitWidth="32.0" layoutX="40.0" layoutY="52.0">
                     <image>
-                        <Image url="/img/ssd_32px.png" />
+                        <Image url="/img/server_32px.png" />
                     </image>
                 </ImageView>
-                <Text fill="WHITE" layoutY="109.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Data" textAlignment="CENTER" wrappingWidth="108.0000102519989">
+                <Text fill="WHITE" layoutY="109.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Simulate" textAlignment="CENTER" wrappingWidth="108.0000102519989">
                     <font>
                         <Font name="Raleway" size="16.0" />
-                    </font></Text>
+                    </font>
+            </Text>
                 <ImageView fitHeight="32.0" fitWidth="32.0" layoutX="37.0" layoutY="146.0">
                     <image>
                         <Image url="/img/chart_32px.png" />
@@ -30,25 +30,24 @@
                 <Text fill="WHITE" layoutX="-3.0" layoutY="201.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Charts" textAlignment="CENTER" wrappingWidth="108.00000321865082">
                     <font>
                         <Font name="Raleway" size="16.0" />
-                    </font></Text>
+                    </font>
+            </Text>
                 <ImageView fitHeight="32.0" fitWidth="32.0" layoutX="37.0" layoutY="242.0">
                     <image>
-                        <Image url="/img/server_32px.png" />
+                        <Image url="/img/ssd_32px.png" />
                     </image>
                 </ImageView>
-                <Text fill="WHITE" layoutY="297.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Simulate" textAlignment="CENTER" wrappingWidth="108.00000476837158">
+                <Text fill="WHITE" layoutY="297.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Settings" textAlignment="CENTER" wrappingWidth="108.00000476837158">
                     <font>
                         <Font name="Raleway" size="16.0" />
-                    </font></Text>
-                <ImageView fitHeight="32.0" fitWidth="32.0" layoutX="38.0" layoutY="685.0">
+                    </font>
+            </Text>
+                <ImageView fitHeight="32.0" fitWidth="32.0" layoutX="38.0" layoutY="700.0" AnchorPane.bottomAnchor="25.0">
                     <image>
                         <Image url="/img/sign_out_32px.png" />
                     </image>
                 </ImageView>
             </children>
-            <padding>
-                <Insets bottom="500.0" />
-            </padding>
         </AnchorPane>
         <AnchorPane layoutX="136.0" layoutY="80.0" prefHeight="200.0" prefWidth="200.0" style="-fx-background-color: #fff;">
             <children>
@@ -63,6 +62,9 @@
         <Button layoutX="819.0" layoutY="80.0" mnemonicParsing="false" text="Button" />
         <Button layoutX="819.0" layoutY="133.0" mnemonicParsing="false" text="Button" />
         <Button layoutX="819.0" layoutY="195.0" mnemonicParsing="false" text="Button" />
-        <Button layoutX="474.0" layoutY="27.0" mnemonicParsing="false" text="Next Step" />
+        <Button layoutX="475.0" layoutY="27.0" mnemonicParsing="false" text="&gt;" />
+      <Button layoutX="445.0" layoutY="27.0" mnemonicParsing="false" text="||" />
+      <Button layoutX="509.0" layoutY="27.0" mnemonicParsing="false" text="&gt;&gt;" />
+      <Button layoutX="551.0" layoutY="27.0" mnemonicParsing="false" text="&gt;&gt;&gt;" />
     </children>
 </AnchorPane>
