--- a/src/views/test.fxml
+++ b/src/views/test.fxml
@@ -1,15 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.control.*?>
+<?import javafx.scene.layout.HBox?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
-<?import javafx.scene.layout.HBox?>
 
-
-
-
-<AnchorPane layoutX="109.0" layoutY="18.0" prefHeight="281.0" prefWidth="310.0" style="-fx-background-color: #fff;" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="111.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+<AnchorPane layoutX="109.0" layoutY="18.0" prefHeight="281.0" prefWidth="310.0" style="-fx-background-color: #fff;" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="111.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" xmlns="http://javafx.com/javafx/8.0.65" xmlns:fx="http://javafx.com/fxml/1">
     <children>
 
         <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Parkeergarage Cityparking Groningen" wrappingWidth="282.7109375" AnchorPane.leftAnchor="10.0" AnchorPane.topAnchor="10.0">
@@ -17,8 +14,6 @@
                 <Font name="Raleway ExtraBold" size="22.0" />
             </font>
         </Text>
-
-        <Button text="TEST" />
 
         <HBox layoutX="381.0" layoutY="51.0" prefHeight="52.0" prefWidth="194.0" spacing="2.0">
             <children>
@@ -31,5 +26,3 @@
 
     </children>
 </AnchorPane>
-
-
