--- a/src/views/charts.fxml
+++ b/src/views/charts.fxml
@@ -9,7 +9,7 @@
 <?import javafx.scene.control.TabPane?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane prefHeight="424.0" prefWidth="670.0" xmlns="http://javafx.com/javafx/9.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.ChartsController">
+<AnchorPane prefHeight="424.0" prefWidth="670.0" xmlns="http://javafx.com/javafx/9.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.ApplicationController">
    <children>
       <TabPane layoutX="14.0" layoutY="41.0" prefHeight="400.0" prefWidth="600.0" tabClosingPolicy="UNAVAILABLE" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
         <tabs>
@@ -18,7 +18,7 @@
               <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
                      <children>
                         <PieChart fx:id="pieChart" layoutX="22.0" layoutY="-44.0" prefHeight="340.0" prefWidth="578.0" AnchorPane.bottomAnchor="54.0" AnchorPane.leftAnchor="10.0" AnchorPane.rightAnchor="92.0" AnchorPane.topAnchor="10.0" />
-                        <Button layoutX="594.0" layoutY="27.0" mnemonicParsing="false" onAction="#setValues" prefHeight="26.0" prefWidth="67.0" text="Button" AnchorPane.rightAnchor="11.0" />
+                        <Button layoutX="594.0" layoutY="27.0" mnemonicParsing="false" prefHeight="26.0" prefWidth="67.0" text="Button" AnchorPane.rightAnchor="11.0" />
                         <TabPane layoutX="194.0" layoutY="75.0" prefHeight="200.0" prefWidth="200.0" side="LEFT" tabClosingPolicy="UNAVAILABLE">
                           <tabs>
                             <Tab text="Untitled Tab 1">
