--- a/src/parkingsimulator/models/slider.fxml
+++ b/src/parkingsimulator/models/slider.fxml
@@ -6,7 +6,7 @@
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.RowConstraints?>
 
-<GridPane alignment="center" hgap="10" prefHeight="302.0" prefWidth="383.0" vgap="10" xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.Controller">
+<GridPane alignment="center" hgap="10" prefHeight="302.0" prefWidth="383.0" vgap="10" xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1" fx:controller="parkingsimulator.controllers.BaseController">
    <columnConstraints>
       <ColumnConstraints />
       <ColumnConstraints />
